<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_loader"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_100"
        android:layout_marginTop="@dimen/dimen_100"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_state_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_state"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        android:contentDescription="@string/empty_state"
        android:importantForAccessibility="yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_loader"
        android:layout_marginTop="@dimen/dimen_30"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:layout_margin="@dimen/dimen_16"
        android:background="@drawable/dotted_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/total_price"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/total_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_16"
        android:textStyle="bold"
        android:textSize="@dimen/text_30"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/total_price"
        android:text="@string/total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total_price"
        app:layout_constraintBottom_toTopOf="@+id/clear_cart"/>

    <TextView
        android:id="@+id/total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_16"
        android:textColor="@color/cabify_color"
        android:textStyle="bold"
        android:textSize="@dimen/text_30"
        tools:text="$ 30"
        app:layout_constraintTop_toBottomOf="@+id/cart_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/total_text"
        app:layout_constraintBottom_toTopOf="@+id/clear_cart"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_cart"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:text="@string/clear_cart"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/clear_cart"
        app:layout_constraintBottom_toTopOf="@+id/proceed_to_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceed_to_checkout"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:text="@string/proceed_to_checkout"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/proceed_to_checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>