<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_4"
    app:cardCornerRadius="@dimen/dimen_8"
    app:strokeColor="@color/cabify_color"
    android:importantForAccessibility="no"
    app:strokeWidth="@dimen/dimen_2"
    android:elevation="@dimen/dimen_2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:importantForAccessibility="no"
        android:padding="@dimen/dimen_10">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/image_container"
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_100"
            app:cardCornerRadius="@dimen/dimen_8"
            android:importantForAccessibility="no"
            android:layout_centerHorizontal="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:scaleType="centerCrop"
                android:importantForAccessibility="no"
                tools:srcCompat="@drawable/cart" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/item_image_discount"
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:layout_gravity="end" />

        </com.google.android.material.card.MaterialCardView >

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_4"
            android:textStyle="bold"
            android:textSize="@dimen/text_20"
            android:importantForAccessibility="yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_container"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/mug" />

        <TextView
            android:id="@+id/item_secondary_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_4"
            android:textStyle="italic"
            android:textSize="@dimen/text_15"
            android:importantForAccessibility="yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_container"
            app:layout_constraintTop_toBottomOf="@+id/item_title"
            tools:text="@string/mug" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="@dimen/dimen_100"
            android:layout_height="wrap_content"
            android:textColor="@color/cabify_color"
            android:textSize="@dimen/text_30"
            android:textStyle="bold"
            android:gravity="end"
            android:importantForAccessibility="yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/discounted_price" />

        <TextView
            android:id="@+id/item_discount_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/text_20"
            android:textStyle="bold"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_price"
            tools:text="@string/price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
